# docs/swagger.json
@@ -2742,7 +2742,7 @@
                 }
             }
         },
-        "/api/visit_histories": {
+        "/api/visit_history": {
             "put": {
                 "description": "更新访问记录信息",
                 "consumes": [
@@ -2838,7 +2838,7 @@
                 }
             }
         },
-        "/api/visit_histories/list": {
+        "/api/visit_history/list": {
             "post": {
                 "description": "获取访问记录分页列表",
                 "consumes": [
@@ -2878,7 +2878,7 @@
                 }
             }
         },
-        "/api/visit_histories/{history_id}": {
+        "/api/visit_history/{history_id}": {
             "get": {
                 "description": "获取单个访问记录",
                 "consumes": [
